// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList Test that the correct tabpanel for regular purple potato renders via url changes 1`] = `
<div>
  <main
    id="tab-view"
  >
    <div
      id="tab-content"
    >
      <h1>
        Router Tabs
      </h1>
      <div
        class="tabs"
        data-testid="carbTabs"
        id="carbTabs"
      >
        <div
          aria-label="carbTabList"
          data-testid="carbTabList"
          role="tablist"
        >
          <button
            aria-controls="potatoTabPanel"
            aria-selected="true"
            data-testid="potato"
            id="potato"
            role="tab"
            tabindex="0"
            type="button"
          >
            Potato
          </button>
          <button
            aria-controls="noodleTabPanel"
            aria-selected="false"
            data-testid="noodle"
            id="noodle"
            role="tab"
            tabindex="-1"
            type="button"
          >
            Noodle
          </button>
        </div>
        <div
          aria-labelledby="potato"
          data-testid="potatoTabPanel"
          id="potatoTabPanel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            aria-label="potatoTabList"
            aria-labelledby="potatoTabPanel"
            data-testid="potatoTabList"
            role="tablist"
          >
            <button
              aria-controls="sweetPanel"
              aria-selected="false"
              data-testid="sweet"
              id="sweet"
              role="tab"
              tabindex="0"
              type="button"
            >
              sweet
            </button>
            <button
              aria-controls="purplePanel"
              aria-selected="true"
              data-testid="purple"
              id="purple"
              role="tab"
              tabindex="0"
              type="button"
            >
              purple
            </button>
          </div>
          <div
            aria-labelledby="purple"
            data-testid="purplePanel"
            id="purplePanel"
            role="tabpanel"
            tabindex="0"
          >
            <div
              aria-label="potatoTabList"
              aria-labelledby="potatoTabPanel"
              data-testid="potatoTabList"
              role="tablist"
            >
              <button
                aria-controls="japanesePanel"
                aria-selected="false"
                data-testid="japanese"
                id="japanese"
                role="tab"
                tabindex="0"
                type="button"
              >
                japanese purple potato
              </button>
              <button
                aria-controls="regularPanel"
                aria-selected="true"
                data-testid="regular"
                id="regular"
                role="tab"
                tabindex="0"
                type="button"
              >
                regular purple potato
              </button>
            </div>
            <div
              aria-labelledby="regular"
              data-testid="regularPanel"
              id="regularPanel"
              role="tabpanel"
              tabindex="0"
            >
              TBA. Purples rolling in
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`TabList Test that the correct tabpanels for noodle renders via url changes 1`] = `
<div>
  <main
    id="tab-view"
  >
    <div
      id="tab-content"
    >
      <h1>
        Router Tabs
      </h1>
      <div
        class="tabs"
        data-testid="carbTabs"
        id="carbTabs"
      >
        <div
          aria-label="carbTabList"
          data-testid="carbTabList"
          role="tablist"
        >
          <button
            aria-controls="potatoTabPanel"
            aria-selected="false"
            data-testid="potato"
            id="potato"
            role="tab"
            tabindex="-1"
            type="button"
          >
            Potato
          </button>
          <button
            aria-controls="noodleTabPanel"
            aria-selected="true"
            data-testid="noodle"
            id="noodle"
            role="tab"
            tabindex="0"
            type="button"
          >
            Noodle
          </button>
        </div>
        <div
          aria-labelledby="noodle"
          data-testid="noodleTabPanel"
          id="noodleTabPanel"
          role="tabpanel"
          tabindex="0"
        >
          more noodles to come
        </div>
      </div>
    </div>
  </main>
</div>
`;
